; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-s6000.c_i2c_wr32.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-s6000.c_i2c_wr32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s6i2c_if = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.s6i2c_if*, i32, i32)* @i2c_wr32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i2c_wr32(%struct.s6i2c_if* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.s6i2c_if*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.s6i2c_if* %0, %struct.s6i2c_if** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.s6i2c_if*, %struct.s6i2c_if** %4, align 8
  %9 = getelementptr inbounds %struct.s6i2c_if, %struct.s6i2c_if* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %5, align 4
  %12 = add i32 %10, %11
  %13 = call i32 @writel(i32 %7, i32 %12)
  ret void
}

declare dso_local i32 @writel(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
